se agrega slogan

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div class="overlay">
 
         </div>
+        <h1 class="hero-title">Este es un sitio fake de Platzi</h1>
     </section>
 </body>
 </html>
